k8s/app-d.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: curriculi
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: curriculi
    spec:
      containers:
      - name: curriculi
        image: eu.gcr.io/iconic-setup-91510/curriculi
        ports:
        - containerPort: 8080
